--- a/tasks-service/src/main/resources/application.properties
+++ b/tasks-service/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=11000
 
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -11,3 +11,8 @@ spring.datasource.platform=postgres
 spring.datasource.url=${dburl}
 spring.datasource.username=${dbu}
 spring.datasource.password=${dbp}
+
+spring.flyway.enabled=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
+
