--- a/tasks-service/src/main/resources/application.properties
+++ b/tasks-service/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgres
