--- a/pom.xml
+++ b/pom.xml
@@ -2,27 +2,87 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-parent</artifactId>
-        <version>Hoxton.RELEASE</version>
-    </parent>
 
-    <packaging>pom</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.3.RELEASE</version>
+    </parent>
 
     <groupId>com</groupId>
     <artifactId>companion</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>companion</name>
+    <packaging>pom</packaging>
     <description>A pet project made by Vladislav Marchenko and Sergey Hvatov</description>
 
     <properties>
         <spring.version>2.3.3.RELEASE</spring.version>
         <java.version>11</java.version>
         <kotlin.version>1.3.72</kotlin.version>
+        <kotlin.coroutines.version>1.3.9</kotlin.coroutines.version>
+        <apache.io.version>2.7</apache.io.version>
+        <apache.log.version>1.2</apache.log.version>
+        <apache.lang.version>3.11</apache.lang.version>
+        <version.infinispan.starter>2.3.3.Final</version.infinispan.starter>
+        <jackson.version>2.11.0</jackson.version>
+        <json.version>20200518</json.version>
+        <guava.version>29.0-jre</guava.version>
+        <model.mapper.version>2.3.8</model.mapper.version>
+        <hibernate.version>5.4.20.Final</hibernate.version>
     </properties>
 
     <modules>
         <module>common</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-reflect</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlinx</groupId>
+                <artifactId>kotlinx-coroutines-core</artifactId>
+                <version>${kotlin.coroutines.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>${model.mapper.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${apache.io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${apache.log.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-spring-boot-starter-embedded</artifactId>
+                <version>${version.infinispan.starter}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
